namespaces/live.cloud-platform.service.justice.gov.uk/probation-performance-shiny-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "probation-performance-shiny-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cpt-probation-performance"
    cloud-platform.justice.gov.uk/application: "probation-performance-shiny"
    cloud-platform.justice.gov.uk/owner: "Community Performance Team: communityperformanceenquiries@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/probation-performance-shiny"
    cloud-platform.justice.gov.uk/team-name: "probation-performance-admin"
    cloud-platform.justice.gov.uk/review-after: ""
